examples/test/testpolicy18818.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18818
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key35: value0
      key13: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value43
      podSelector:
        matchLabels:
          key44: value19
          key35: value46
